--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/3b40a7d713.js" crossorigin="anonymous"></script>
     <title>Amazon 2.0</title>
     <script src="https://cdn.jsdelivr.net/npm/jdenticon@3.1.1/dist/jdenticon.min.js" async
@@ -96,8 +97,18 @@
                     </div>
                 </div>
             </div>
-            <div class="main-section">
+            <div class="main-section flex-1 p-6">
+                <div class="main-section-banner h-44 w-full rounded-lg flex items-end">
+                    <div class="button bg-white w-36 h-10 rounded-full flex justify-center items-center m-4 cursor-pointer">
+                        <h4 class="text-bold text-yellow-500">Browse Products</h4>
+                    </div>
+                </div>
+                <div class="main-section-categories">
+                    <h1 class="popular-categories font-bold ">Popular categories</h1>
+                </div>
+                <div class="main-section-deals">
 
+                </div>
             </div>
         </div>
     </div>
