--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                   <svg class="h-12 w-12 rounded" data-jdenticon-value="Haseeb"></svg>
             </div>
         </div>
-        <div class="main h-screen flex">
+        <div class="main h-full flex">
             <div class="main-sidebar w-1/5 bg-gray-900 border-gray-700 border-t-2 p-6">
                 <div class="sidebar-categories">
                     <div class="sidebar-main-category text-yellow-500 flex font-bold p-2 bg-gray-700 rounded-lg cursor-pointer">
@@ -97,17 +97,126 @@
                     </div>
                 </div>
             </div>
-            <div class="main-section flex-1 p-6">
+            <div class="main-section flex-1 p-6 bg-gray-100">
                 <div class="main-section-banner h-44 w-full rounded-lg flex items-end">
                     <div class="button bg-white w-36 h-10 rounded-full flex justify-center items-center m-4 cursor-pointer">
                         <h4 class="text-bold text-yellow-500">Browse Products</h4>
                     </div>
                 </div>
-                <div class="main-section-categories">
-                    <h1 class="popular-categories font-bold ">Popular categories</h1>
+                <div class="main-section-categories mt-10">
+                    <h1 class="popular-categories font-bold flex items-center">
+                        Popular categories
+                        <svg class="h-6  w-6 text-yellow-400" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
+                            <path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z" />
+                        </svg>
+                    </h1> 
+                    <div class="categories mt-5 flex">
+                        <div class="icon-desktop h-20 w-20 bg-white rounded-xl flex justify-center items-center">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="h-12 w-12 text-gray-500" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9.75 17L9 20l-1 1h8l-1-1-.75-3M3 13h18M5 17h14a2 2 0 002-2V5a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z" />
+                              </svg>
+                        </div>
+                        <div class="icon-gift h-20 w-20 bg-white rounded-xl flex justify-center items-center ml-6">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="h-12 w-12 text-gray-500" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8v13m0-13V6a2 2 0 112 2h-2zm0 0V5.5A2.5 2.5 0 109.5 8H12zm-7 4h14M5 12a2 2 0 110-4h14a2 2 0 110 4M5 12v7a2 2 0 002 2h10a2 2 0 002-2v-7" />
+                            </svg>
+                        </div>
+                        <div class="icon-gift h-20 w-20 bg-white rounded-xl flex justify-center items-center ml-6">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="h-12 w-12 text-gray-500" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 18h.01M8 21h8a2 2 0 002-2V5a2 2 0 00-2-2H8a2 2 0 00-2 2v14a2 2 0 002 2z" />
+                            </svg>
+                        </div>
+                        <div class="icon-gift h-20 w-20 bg-white rounded-xl flex justify-center items-center ml-6">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="h-12 w-12 text-gray-500" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 6.253v13m0-13C10.832 5.477 9.246 5 7.5 5S4.168 5.477 3 6.253v13C4.168 18.477 5.754 18 7.5 18s3.332.477 4.5 1.253m0-13C13.168 5.477 14.754 5 16.5 5c1.747 0 3.332.477 4.5 1.253v13C19.832 18.477 18.247 18 16.5 18c-1.746 0-3.332.477-4.5 1.253" />
+                            </svg>
+                        </div>
+                        <div class="icon-gift h-20 w-20 bg-white rounded-xl flex justify-center items-center ml-6">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="h-12 w-12 text-gray-500" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 9a2 2 0 012-2h.93a2 2 0 001.664-.89l.812-1.22A2 2 0 0110.07 4h3.86a2 2 0 011.664.89l.812 1.22A2 2 0 0018.07 7H19a2 2 0 012 2v9a2 2 0 01-2 2H5a2 2 0 01-2-2V9z" />
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 13a3 3 0 11-6 0 3 3 0 016 0z" />
+                            </svg>
+                        </div>
+                        <div class="icon-gift h-20 w-20 bg-white rounded-xl flex justify-center items-center ml-6">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="h-12 w-12 text-gray-500" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6" />
+                            </svg>
+                        </div>
+
+                    </div>
                 </div>
                 <div class="main-section-deals">
-
+                    <h1 class="text-2xl font-bold text-gray-700 mb-5">Hot Deals</h1>
+                    <div class="main-section-products flex">
+                        <div class="main-product">
+                            <div class="product-image w-48 h-52 bg-white rounded-lg">
+                                <img class ="w-full h-full object-contain p-4" src="https://m.media-amazon.com/images/I/41V5KQ500IL.jpg" alt="">
+                            </div>
+                            <div class="product-name text-gray-700 font-bold mt-2 text-sm">
+                                Nintendo Switch(2019)
+                            </div>
+                            <div class="product-make text-green-700 font-bold">
+                                Nintendo
+                            </div>
+                            <div class="product-rating text-yellow-300 my-1">
+                                ⭐⭐⭐⭐ 4
+                            </div>
+                            <div class="product-price font-bold text-gray-500 text-lg">
+                                $290.00
+                            </div>
+                        </div>
+                        <div class="main-product ml-5">
+                            <div class="product-image w-48 h-52 bg-white rounded-lg">
+                                <img class ="w-full h-full object-contain p-4" src="https://m.media-amazon.com/images/I/71RqV-R-BkL._SX450_.jpg" alt="">
+                            </div>
+                            <div class="product-name text-gray-700 font-bold mt-2 text-sm">
+                                HP Pavilion 11th Gen
+                            </div>
+                            <div class="product-make text-green-700 font-bold">
+                                HP
+                            </div>
+                            <div class="product-rating text-yellow-300 my-1">
+                                ⭐⭐⭐ 3
+                            </div>
+                            <div class="product-price font-bold text-gray-500 text-lg">
+                                $600.00
+                            </div>
+                        </div>
+                        <div class="main-product ml-5">
+                            <div class="product-image w-48 h-52 bg-white rounded-lg">
+                                <img class ="w-full h-full object-contain p-4" src="https://store.storeimages.cdn-apple.com/4668/as-images.apple.com/is/iphone-12-pro-family-hero?wid=940&hei=1112&fmt=jpeg&qlt=80&.v=1604021663000" alt="">
+                            </div>
+                            <div class="product-name text-gray-700 font-bold mt-2 text-sm">
+                                Iphone 12 Pro
+                            </div>
+                            <div class="product-make text-green-700 font-bold">
+                                Apple
+                            </div>
+                            <div class="product-rating text-yellow-300 my-1">
+                                ⭐⭐⭐⭐⭐ 5
+                            </div>
+                            <div class="product-price font-bold text-gray-500 text-lg">
+                                $650.00
+                            </div>
+                        </div>
+                        <div class="main-product ml-5">
+                            <div class="product-image w-48 h-52 bg-white rounded-lg">
+                                <img class ="w-full h-full object-contain p-4" src="https://cdn-4.nikon-cdn.com/e/Q5NM96RZZo-YRYNeYvAi9beHK4x3L-wmtXfawgokSdJshIBBUUdmog==/Views/353_1618_D780_front.png" alt="">
+                            </div>
+                            <div class="product-name text-gray-700 font-bold mt-2 text-sm">
+                                Nikon D780
+                            </div>
+                            <div class="product-make text-green-700 font-bold">
+                                Nikon
+                            </div>
+                            <div class="product-rating text-yellow-300 my-1">
+                                ⭐⭐⭐⭐4
+                            </div>
+                            <div class="product-price font-bold text-gray-500 text-lg">
+                                $350.00
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
