--- a/cart.html
+++ b/cart.html
@@ -36,11 +36,15 @@
                 <svg class="h-4 w-4" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z" />
                   </svg>
-                  <div class="cart-icon h-10 w-10 bg-yellow-500 flex items-center justify-center rounded-xl">
-                    <svg class="h-4 w-4 text-gray-600" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5M7 13l-2.293 2.293c-.63.63-.184 1.707.707 1.707H17m0 0a2 2 0 100 4 2 2 0 000-4zm-8 2a2 2 0 11-4 0 2 2 0 014 0z" />
-                      </svg>
-                  </div>
+                  <!--Cart Icon-->
+                <a href="cart.html">
+                    <div class="cart-icon relative h-10 w-10 bg-yellow-500 flex items-center justify-center rounded-xl">
+                        <div class="cart-item-number absolute -top-1 -right-1 bg-white h-4 w-4 rounded-full flex justify-center items-center text-gray-800 text-xs font-bold">1</div>
+                        <svg class="h-4 w-4 text-gray-600" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5M7 13l-2.293 2.293c-.63.63-.184 1.707.707 1.707H17m0 0a2 2 0 100 4 2 2 0 000-4zm-8 2a2 2 0 11-4 0 2 2 0 014 0z" />
+                        </svg>
+                    </div>
+                </a>
                   <svg class="h-4 w-4" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 17h5l-1.405-1.405A2.032 2.032 0 0118 14.158V11a6.002 6.002 0 00-4-5.659V5a2 2 0 10-4 0v.341C7.67 6.165 6 8.388 6 11v3.159c0 .538-.214 1.055-.595 1.436L4 17h5m6 0v1a3 3 0 11-6 0v-1m6 0H9" />
                   </svg>
@@ -103,22 +107,75 @@
                     <h2 class="flex-grow">Product</h2>
                     <h2 class="w-48">Count</h2>
                     <h2 class="w-48">Total Cost</h2>
+                    <span class="w-10"></span>
                 </div>
-                <div class="cart-items">
-                    <div class="cart-image">
-
+                <div class="cart-items mt-5">
+                    <div class="cart-item flex items-center p-4 border-b border-gray-100">
+                        <div class="cart-item-image w-40 h-24 bg-white p-4 rounded-lg ">
+                            <img class=" w-full h-full object-contain" src="https://m.media-amazon.com/images/I/71IQiviMzWL._AC_SL1500_.jpg" alt="">
+                        </div> 
+                        <div class="cart-item-details flex-grow">
+                            <div class="cart-item-title font-bold text-sm text-gray-600">
+                                Apple MacBook Pro 13,3
+                            </div>
+                            <div class="cart-item-brand text-sm text-gray-400">
+                                Apple
+                            </div>
+                        </div>
+                        <div class="cart-item-counter w-48 flex items-center">
+                            <div class="chevron-left cursor-pointer text-gray-400 bg-gray-100 rounded h-6 w-6 flex justify-center items-center hover:bg-gray-200">
+                                <i class="fas fa-chevron-left fa-xs"></i>
+                            </div>
+                            <h4 class="text-gray-400 mx-2">x1</h4>
+                            <div class="chevron-right cursor-pointer text-gray-400 bg-gray-100 rounded h-6 w-6 flex justify-center items-center hover:bg-gray-200">
+                                <i class="fas fa-chevron-right fa-xs"></i>
+                            </div>
+                        </div>
+                        <div class="cart-item-total-cost w-48 font-bold text-gray-400">
+                            $1,149.00
+                        </div>
+                        <div class="cart-item-delete w-10 font-bold text-gray-300 cursor-pointer hover:text-gray-400">
+                            <i class="fas fa-times fa-xs"></i>
+                        </div>
                     </div>
-                    <div class="cart-item-details">
-
+                    <div class="cart-item flex items-center p-4 border-b border-gray-100">
+                        <div class="cart-item-image w-40 h-24 bg-white p-4 rounded-lg ">
+                            <img class=" w-full h-full object-contain" src="https://m.media-amazon.com/images/I/41V5KQ500IL.jpg" alt="">
+                        </div> 
+                        <div class="cart-item-details flex-grow">
+                            <div class="cart-item-title font-bold text-sm text-gray-600">
+                                Nintendo Switch
+                            </div>
+                            <div class="cart-item-brand text-sm text-gray-400">
+                                Nintendo
+                            </div>
+                        </div>
+                        <div class="cart-item-counter w-48 flex items-center">
+                            <div class="chevron-left cursor-pointer text-gray-400 bg-gray-100 rounded h-6 w-6 flex justify-center items-center hover:bg-gray-200">
+                                <i class="fas fa-chevron-left fa-xs"></i>
+                            </div>
+                            <h4 class="text-gray-400 mx-2">x1</h4>
+                            <div class="chevron-right cursor-pointer text-gray-400 bg-gray-100 rounded h-6 w-6 flex justify-center items-center hover:bg-gray-200">
+                                <i class="fas fa-chevron-right fa-xs"></i>
+                            </div>
+                        </div>
+                        <div class="cart-item-total-cost w-48 font-bold text-gray-400">
+                            $290.00
+                        </div>
+                        <div class="cart-item-delete w-10 font-bold text-gray-300 cursor-pointer hover:text-gray-400">
+                            <i class="fas fa-times fa-xs"></i>
+                        </div>
                     </div>
-                    <div class="cart-item-counter">
-
+                </div>
+                <div class="complete-order flex items-center justify-end mt-5">
+                    <div class="total-cost">
+                        <h2 class="text-gray-400">Total Cost</h2>
+                        <div class="total-cost-number font-bold text-2xl text-gray-600">
+                            $1,439.00
+                        </div>
                     </div>
-                    <div class="cart-item-total-cost">
-
-                    </div>
-                    <div class="cart-item-delete">
-                        
+                    <div class="complete-order-button w-56 flex items-center justify-center p-4 ml-5 bg-yellow-500 rounded-lg font-bold text-gray-800 hover:bg-yellow-600 cursor-pointer">
+                        Complete Order
                     </div>
                 </div>
             </div>
