--- a/cart.html
+++ b/cart.html
@@ -53,6 +53,7 @@
         </div>
         <div class="main h-screen flex">
             <div class="main-sidebar w-1/5 bg-gray-900 border-gray-700 border-t-2 p-6">
+                <!--sidebar-->
                 <div class="sidebar-categories">
                     <div class="sidebar-main-category text-yellow-500 flex font-bold p-2 bg-gray-700 rounded-lg cursor-pointer">
                         <span class="w-8"><svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
