--- a/cart.html
+++ b/cart.html
@@ -7,11 +7,22 @@
     <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/3b40a7d713.js" crossorigin="anonymous"></script>
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+    <script src="https://www.gstatic.com/firebasejs/8.9.1/firebase-app.js"></script>
+    <!-- TODO: Add SDKs for Firebase products that you want to use
+    https://firebase.google.com/docs/web/setup#available-libraries -->
+    <script src="https://www.gstatic.com/firebasejs/8.9.1/firebase-analytics.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.9.1/firebase-firestore.js"></script>
+    <script src="./firebase.js"></script>
+    <script src="./header.js"></script>
+    <script src="./cart.js"></script>
     <title>Amazon 2.0</title>
     <script src="https://cdn.jsdelivr.net/npm/jdenticon@3.1.1/dist/jdenticon.min.js" async
         integrity="sha384-l0/0sn63N3mskDgRYJZA6Mogihu0VY3CusdLMiwpJ9LFPklOARUcOiWEIGGmFELx"
         crossorigin="anonymous">
     </script>
+
+
 </head>
 <body>
     <div class="bg-white w-full">
@@ -39,7 +50,7 @@
                   <!--Cart Icon-->
                 <a href="cart.html">
                     <div class="cart-icon relative h-10 w-10 bg-yellow-500 flex items-center justify-center rounded-xl">
-                        <div class="cart-item-number absolute -top-1 -right-1 bg-white h-4 w-4 rounded-full flex justify-center items-center text-gray-800 text-xs font-bold">1</div>
+                        <div class="cart-item-number absolute -top-1 -right-1 bg-white h-4 w-4 rounded-full flex justify-center items-center text-gray-800 text-xs font-bold"></div>
                         <svg class="h-4 w-4 text-gray-600" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5M7 13l-2.293 2.293c-.63.63-.184 1.707.707 1.707H17m0 0a2 2 0 100 4 2 2 0 000-4zm-8 2a2 2 0 11-4 0 2 2 0 014 0z" />
                         </svg>
@@ -51,7 +62,7 @@
                   <svg class="h-12 w-12 rounded" data-jdenticon-value="Haseeb"></svg>
             </div>
         </div>
-        <div class="main h-screen flex">
+        <div class="main h-full flex">
             <div class="main-sidebar w-1/5 bg-gray-900 border-gray-700 border-t-2 p-6">
                 <!--sidebar-->
                 <div class="sidebar-categories">
@@ -110,63 +121,9 @@
                     <h2 class="w-48">Total Cost</h2>
                     <span class="w-10"></span>
                 </div>
+                <!--Cart Items-->
                 <div class="cart-items mt-5">
-                    <div class="cart-item flex items-center p-4 border-b border-gray-100">
-                        <div class="cart-item-image w-40 h-24 bg-white p-4 rounded-lg ">
-                            <img class=" w-full h-full object-contain" src="https://m.media-amazon.com/images/I/71IQiviMzWL._AC_SL1500_.jpg" alt="">
-                        </div> 
-                        <div class="cart-item-details flex-grow">
-                            <div class="cart-item-title font-bold text-sm text-gray-600">
-                                Apple MacBook Pro 13,3
-                            </div>
-                            <div class="cart-item-brand text-sm text-gray-400">
-                                Apple
-                            </div>
-                        </div>
-                        <div class="cart-item-counter w-48 flex items-center">
-                            <div class="chevron-left cursor-pointer text-gray-400 bg-gray-100 rounded h-6 w-6 flex justify-center items-center hover:bg-gray-200">
-                                <i class="fas fa-chevron-left fa-xs"></i>
-                            </div>
-                            <h4 class="text-gray-400 mx-2">x1</h4>
-                            <div class="chevron-right cursor-pointer text-gray-400 bg-gray-100 rounded h-6 w-6 flex justify-center items-center hover:bg-gray-200">
-                                <i class="fas fa-chevron-right fa-xs"></i>
-                            </div>
-                        </div>
-                        <div class="cart-item-total-cost w-48 font-bold text-gray-400">
-                            $1,149.00
-                        </div>
-                        <div class="cart-item-delete w-10 font-bold text-gray-300 cursor-pointer hover:text-gray-400">
-                            <i class="fas fa-times fa-xs"></i>
-                        </div>
-                    </div>
-                    <div class="cart-item flex items-center p-4 border-b border-gray-100">
-                        <div class="cart-item-image w-40 h-24 bg-white p-4 rounded-lg ">
-                            <img class=" w-full h-full object-contain" src="https://m.media-amazon.com/images/I/41V5KQ500IL.jpg" alt="">
-                        </div> 
-                        <div class="cart-item-details flex-grow">
-                            <div class="cart-item-title font-bold text-sm text-gray-600">
-                                Nintendo Switch
-                            </div>
-                            <div class="cart-item-brand text-sm text-gray-400">
-                                Nintendo
-                            </div>
-                        </div>
-                        <div class="cart-item-counter w-48 flex items-center">
-                            <div class="chevron-left cursor-pointer text-gray-400 bg-gray-100 rounded h-6 w-6 flex justify-center items-center hover:bg-gray-200">
-                                <i class="fas fa-chevron-left fa-xs"></i>
-                            </div>
-                            <h4 class="text-gray-400 mx-2">x1</h4>
-                            <div class="chevron-right cursor-pointer text-gray-400 bg-gray-100 rounded h-6 w-6 flex justify-center items-center hover:bg-gray-200">
-                                <i class="fas fa-chevron-right fa-xs"></i>
-                            </div>
-                        </div>
-                        <div class="cart-item-total-cost w-48 font-bold text-gray-400">
-                            $290.00
-                        </div>
-                        <div class="cart-item-delete w-10 font-bold text-gray-300 cursor-pointer hover:text-gray-400">
-                            <i class="fas fa-times fa-xs"></i>
-                        </div>
-                    </div>
+                    <!--cart items from db-->
                 </div>
                 <div class="complete-order flex items-center justify-end mt-5">
                     <div class="total-cost">
